# Algorithms-Project

./: CMakeLists.txt  task3.cpp
Task01/: ALGORITHM.md  Board.hpp  constants.c  gui_main.cpp  main.cpp
Task02/: main.cpp
Task03/: task3.cpp
Task06/: Task 06
Task07/: job_processing_BF.cpp  job_processing_DP.cpp
Task08/: Graph.cpp  Graph.h  main.cpp
Task09/: brute_force.cpp  brute_force.hpp
Task10/: main.cpp
